# ai-powered-pdf-etl-pipeline

./: .env.example  .gitignore  README.md  REFERENCE_CONTEXT.md  pyproject.toml
data/input/invoice_dataset/: batch1_1.csv
data/input/receipts_dataset/: annotations.xml
data/output/: receipts_extraction_service_report.md
docs/technical-test/: mid-level-data-eng-pdf.md
src/notebook/: prototype_solution_notebook.ipynb  receipts_extraction_service_notebook.ipynb
src/notebook/mlruns/0/: meta.yaml
src/notebook/mlruns/0/traces/tr-0136e7bf60f27d30f4e3bbf9a58a921b/: trace_info.yaml
src/notebook/mlruns/0/traces/tr-029871161a2e501c2435abd69b00d197/: trace_info.yaml
src/notebook/mlruns/0/traces/tr-02ad8ab34a59bf66f829db902272f99b/: trace_info.yaml
src/notebook/mlruns/0/traces/tr-07d1f9a1398c3bd0cdfe9d55d1300909/: trace_info.yaml
src/notebook/mlruns/0/traces/tr-0a459e754838e23cb4ec86151a4e2279/: trace_info.yaml
src/notebook/mlruns/0/traces/tr-18723554bc00d370577a1704412d487a/: trace_info.yaml
src/notebook/mlruns/0/traces/tr-19b53f283da6450a9060c6b553e004a7/: trace_info.yaml
src/notebook/mlruns/0/traces/tr-1c1180d14c4de2abf8543f2af2df1026/: trace_info.yaml
src/notebook/mlruns/0/traces/tr-1e5065c40472855f7017e102ca00b478/: trace_info.yaml
src/notebook/mlruns/0/traces/tr-2276104f365bf73323f314ef3b00911c/: trace_info.yaml
src/notebook/mlruns/0/traces/tr-2e0e265f7ee25705a2a44e4584860f99/: trace_info.yaml
src/notebook/mlruns/0/traces/tr-2f3481e77652bc02ec8dd3c8530c7cb7/: trace_info.yaml
(+303 files in other folders)
