[project]
name = "etl-pipeline-pdfs"
version = "0.1.0"
description = "ETL Pipeline with LangGraph for PDF data extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "pdfplumber>=0.11.0",
    "tabula-py>=2.9.0",
    "pytesseract>=0.3.10",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "kaleido>=0.2.1",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "google-cloud-bigquery>=3.38.0",
    "langchain-google-vertexai>=3.0.2",
    "mlflow>=3.5.1",
    "langchain-community>=0.4.1",
    "groq>=0.33.0",
    "langgraph-gen>=0.0.6",
    "langchain-groq>=1.0.0",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.11",
]
